changed 'wich' to 'which' in html doc

--- a/index_tom.html
+++ b/index_tom.html
@@ -22,7 +22,7 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <p>Select a year to review wich states have outstanding UTF balances</p>
+            <p>Select a year to review which states have outstanding UTF balances</p>
             <select id="selDataset">
             <option value="Y2021">2021</option>
             <option value="Y2020">2020</option>
