--- a/Pro 3 Landing Page/index2.html
+++ b/Pro 3 Landing Page/index2.html
@@ -73,16 +73,14 @@
     </div>
   </div>
 </section>
-
 <hr>
-
 <section id="sign" class= "sign py-5">
 <div class="row align-items-center container my-5 mx-auto">
   <div class="text col-lg-6 col-md-6 col-12 w-50 pt-5 pb-5">
     <!-- <h2>Tables Go Here</h2> -->
     <div class="row">
       <div class="col-md-12">
-        <select id="selDataset">
+        <select id="selDataset2">
         <option value="Y2021">2021</option>
         <option value="Y2020">2020</option>
         <option value="Y2019">2019</option>
